--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'PT Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .home,.services,.tinting,.contact,.wrapping,.branding,.buycar
@@ -11,8 +16,11 @@
  display: flex;
  height: 90vh;
  align-items: center;
+ 
  justify-content: center;
  font-size: 3rem;
+ font-family: "Open Sans", sans-serif;
+ font-optical-sizing: auto;
 }
 
 /* .home {
@@ -44,11 +52,11 @@
 }
 
 .contact{
-  background-image: url('./images/contact.jpg');
+  background-image: linear-gradient( rgba(0,0,0,.5), rgba(0,0,0,.5) ),url('./images/contact.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  color: #000000;
+  color: #ffffff;
   font-size: 100px;
 }
 
@@ -58,9 +66,10 @@
   background-image: linear-gradient( rgba(0,0,0,.5), rgba(0,0,0,.5) ),url('images/cardwrap.jpg');
   background-position: center;
   background-size: cover;
+ 
   background-repeat: no-repeat;
-  color: #000000;
-  font-size: 100px;
+  color: #ffffff;
+  font-size: 6vw;
 }
 .branding {
   background-image: linear-gradient( rgba(0,0,0,.5), rgba(0,0,0,.5) ),url('./images/carbrand.jpg');
@@ -81,6 +90,9 @@
 .wrapping-style{
   background-color: #fff;
   padding: 4rem;
+  width: 100vw;
+
+
 }
 .wrapping.h1{
   text-align: center;
@@ -108,4 +120,8 @@
 }
 .buyacar-p{
   font-size: 25px;
+}
+
+form{
+  width: 84vw;
 }
