--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -23,6 +23,8 @@ video{
   color: #fff;
   font-size:  100px;
   margin-top: -100px;
+  font-weight: 600;
+  letter-spacing: 1vw;
 }
 
 .hero-container > p {
