--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
 
 
 .services {
-  background-image: url('./images/carimg2.png');
+  background-image: linear-gradient( rgba(0,0,0,.5), rgba(0,0,0,.5) ),url('./images/carimg2.png');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -43,7 +43,7 @@
 }
 
 .tinting{
-  background-image: url('./images/cartint2.jpg');
+  background-image:linear-gradient( rgba(0,0,0,.5), rgba(0,0,0,.5) ), url('./images/cartint2.jpg');
   background-position: center;
   background-size:auto;
   background-repeat: no-repeat;
@@ -80,11 +80,11 @@
   font-size: 100px;
 }
 .buycar {
-  background-image: url('./images/carbuy.jpg');
+  background-image: linear-gradient( rgba(0,0,0,.5), rgba(0,0,0,.5) ),url('./images/carbuy.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  color: #000000;
+  color: #ffffff;
   font-size: 100px;
 }
 .wrapping-style{
@@ -96,30 +96,30 @@
 }
 .wrapping.h1{
   text-align: center;
-  font-size: 60px;
+  font-size: 10vw;
 }
 .wrapping-title{
   
   text-align: center;
-  font-size: 60px;
+  font-size: 7vh;
 }
 .tinting-title{
   text-align: left;
-  font-size:50px;
+  font-size:6vh;
 }
 
 .wrapping-p{
   text-align: center;
-  font-size: 30px;
+  font-size: 3vh;
 
   color: #000000;
 }
 
 .wrapping-ul{
-  font-size: 25px;
+  font-size: 3vh;
 }
 .buyacar-p{
-  font-size: 25px;
+  font-size: 3vhpx;
 }
 
 form{
